Update Dockerfile to use Python 3.13-slim for improved performance and compatibility. Refactor entry point to use exec form for better signal handling. Remove deprecated files including monitoring scripts, server, and various configuration documents to streamline project structure. Update requirements and configuration files to reflect recent changes.

--- a/cfg/opensips-ai-voice-connector.ini
+++ b/cfg/opensips-ai-voice-connector.ini
@@ -62,7 +62,13 @@ sample_rate = 22050
 disabled = true
 
 [openai]
-disabled = true
+disabled = false
+# OpenAI model configuration
+model = gpt-4o
+temperature = 0.2
+top_p = 0.7
+max_tokens = 80
+# Set OPENAI_API_KEY in environment
 
 [general]
 logfile = vosk_connector.log
