--- a/cfg/opensips.cfg
+++ b/cfg/opensips.cfg
@@ -217,7 +217,7 @@ route {
     # ============ Simplified AI Voice Processing ============
     
     # Define OAVC variables
-    $var(oavc_host) = "ai-voice-backend";
+    $var(oavc_host) = "opensips-ai-voice-connector";
     $var(oavc_port) = "8089";
     $var(ai_processing_timeout) = 60;
     
